[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/sprites/comet_card.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/title/comet_logo.png" type="Texture" id=2]
[ext_resource path="res://assets/shaders/wave.shader" type="Shader" id=3]
[ext_resource path="res://assets/sprites/title/game_logo_padding.png" type="Texture" id=4]
[ext_resource path="res://assets/screenplayer/fonts/aquarius_bold.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/game_state/gst_main_menu.gd" type="Script" id=6]
[ext_resource path="res://assets/streams/music/menu.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/screenplayer/fonts/aquarius.regular-mono.ttf" type="DynamicFontData" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/toScreen = null
shader_param/effectType = 0
shader_param/uSpeed = 1.0
shader_param/uFrequency = 32.0
shader_param/uWaveAmplitude = 0.025

[sub_resource type="Animation" id=5]
resource_name = "FlashText"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PanyKey:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 3.605, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PanyKey:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "BaseTitleAnim"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 6, 8 ),
"transitions": PoolRealArray( 0.210224, 60887.3, 0.203063, 0.329877 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 464, 0 ), Vector2( 464, 0 ), Vector2( 1296, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameLogo:material:shader_param/uWaveAmplitude")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 8, 9, 9.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 4.0, 0.013, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameLogo:material:shader_param/uFrequency")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 8 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 32.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GameLogo:material:shader_param/uSpeed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 7.8 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GameLogo:material:shader_param/effectType")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GameLogo:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PanyKey:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 9.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("PanyKey:rect_scale")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = false
tracks/7/keys = {
"times": PoolRealArray( 8, 8.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameLogo:material:shader_param/uWaveAmplitude")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameLogo:material:shader_param/uFrequency")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 32.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GameLogo:material:shader_param/uSpeed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GameLogo:material:shader_param/effectType")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GameLogo:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PanyKey:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("PanyKey:rect_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ConfigLayer/ColorRect:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath(".:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "ShowConfig"
tracks/0/type = "value"
tracks/0/path = NodePath("ConfigLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/toScreen = null
shader_param/effectType = 0
shader_param/uSpeed = 4.0
shader_param/uFrequency = 32.0
shader_param/uWaveAmplitude = 4.0

[sub_resource type="DynamicFont" id=8]
outline_size = 1
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=9]
resource_name = "FlashText"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PanyKey:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 3.605, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PanyKey:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.25, 0.25 )

[node name="CometCard" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
material = SubResource( 1 )
margin_right = 1888.0
margin_bottom = 240.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 2

[node name="PanyKey" type="Label" parent="."]
visible = false
margin_left = 1306.0
margin_top = 185.0
margin_right = 1612.0
margin_bottom = 207.0
rect_pivot_offset = Vector2( 136, 10 )
custom_fonts/font = ExtResource( 5 )
text = "PRESS ANY KEY TO START"

[node name="FlashText" type="AnimationPlayer" parent="PanyKey"]
root_node = NodePath("../..")
autoplay = "FlashText"
anims/FlashText = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="CometLogo" type="Sprite" parent="."]
position = Vector2( 632, 128 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "BaseTitleAnim"
anims/BaseTitleAnim = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/ShowConfig = SubResource( 7 )

[node name="GameLogo" type="Sprite" parent="."]
visible = false
material = SubResource( 4 )
position = Vector2( 1456, 72 )
texture = ExtResource( 4 )

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "Music"

[node name="ConfigLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="ColorRect" type="ColorRect" parent="ConfigLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0627451, 0.0117647, 0.176471, 0.501961 )

[node name="VolumeControl" type="VBoxContainer" parent="ConfigLayer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
mouse_default_cursor_shape = 2
custom_constants/separation = 8

[node name="MusVol" type="Label" parent="ConfigLayer/ColorRect/VolumeControl"]
margin_right = 256.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 136, 10 )
custom_colors/font_outline_modulate = Color( 0.0235294, 0.0117647, 0.176471, 1 )
custom_fonts/font = SubResource( 8 )
text = "Music Volume"
align = 1

[node name="HSlider" type="HSlider" parent="ConfigLayer/ColorRect/VolumeControl"]
margin_top = 33.0
margin_right = 256.0
margin_bottom = 49.0
mouse_default_cursor_shape = 2
value = 100.0

[node name="SoundVol" type="Label" parent="ConfigLayer/ColorRect/VolumeControl"]
margin_top = 57.0
margin_right = 256.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 136, 10 )
custom_colors/font_outline_modulate = Color( 0.0235294, 0.0117647, 0.176471, 1 )
custom_fonts/font = SubResource( 8 )
text = "Sound Volume"
align = 1

[node name="HSlider2" type="HSlider" parent="ConfigLayer/ColorRect/VolumeControl"]
margin_top = 90.0
margin_right = 256.0
margin_bottom = 106.0
mouse_default_cursor_shape = 2
value = 100.0

[node name="PanyKey" type="Label" parent="ConfigLayer"]
margin_left = 8.0
margin_top = 185.0
margin_right = 314.0
margin_bottom = 207.0
rect_pivot_offset = Vector2( 136, 10 )
custom_fonts/font = ExtResource( 5 )
text = "PRESS ANY KEY TO START"

[node name="FlashText" type="AnimationPlayer" parent="ConfigLayer/PanyKey"]
root_node = NodePath("../..")
autoplay = "FlashText"
anims/FlashText = SubResource( 9 )
anims/RESET = SubResource( 10 )
